fix spacing in at-a-glance

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -188,6 +188,10 @@ div > label {
   margin-bottom: 5px;
 }
 
+.at-a-glance-info > h1 {
+    margin-bottom: 20px
+}
+
 #general-stats {
   margin: 0 auto;
   height: 80%;
@@ -207,6 +211,10 @@ div > label {
 #general-stats > div > h1 {
   font-size: 18px;
   font-weight: 800;
+}
+
+.cost-info > h1 {
+    margin-bottom: 6px;
 }
 
 .cost-info > ul {
